# converge-ai

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  PHASE1_COMMIT_SUMMARY.md  README.md  alembic.ini  create_test_complaints.py  create_test_ops_user.py  docker-compose.yml  fix_imports.py  fix_metrics_repo.py  pyproject.toml  requirements.txt  test_analytics.py  test_entity_extraction_debug.py  test_ops_login.py  test_pattern_matcher_debug.py  test_results.json
backend/.dev-logs/: 002_2025-10-06_setup-test-results.md  003_2025-10-06_phase1-completion-summary.md  004_2025-10-06_email-setup-complete.md  006_2025-10-06_phase2-completion-summary.md  007_2025-10-06_table-explanations.md  008_2025-10-06_pincode-optimization.md  008_2025-10-08_chat-api-implementation.md  009_2025-10-06_staff-rbac-implementation.md  009_2025-10-08_intent-classification-branch.md  010_2025-10-06_phase3-core-configuration.md  010_2025-10-08_multi-intent-classification-implementation.md  011_2025-10-06_phase4-authentication-authorization.md  011_2025-10-08_intent-classification-test-results.md  012_2025-10-07_phase5-user-management-api.md  012_2025-10-08_implementation-complete-summary.md  013_2025-10-07_architecture-refactoring-layered-design.md  013_2025-10-08_out-of-scope-handling-explained.md  014_2025-10-07_api-testing-results.md  014_2025-10-08_gemini-model-compatibility-issue.md  015_2025-10-07_refactoring-complete-summary.md  016_2025-10-07_debugging-and-reschedule-api.md  017_2025-10-07_booking-apis-complete.md  AI_AGENTS_STATUS.md  BOOKING_AGENT_COMPLETE_SUMMARY.md  BOOKING_INTEGRATION_TEST_COMPLETE.md  CANCELLATION_AGENT_IMPLEMENTATION.md  CHAT_API_COORDINATOR_INTEGRATION.md  COMPLAINT_AGENT_IMPLEMENTATION.md  COORDINATOR_AGENT_IMPLEMENTATION.md  DEVELOPMENT_WORKFLOW_BEST_PRACTICES.md  EMBEDDING_QUICK_REFERENCE.md  EMBEDDING_VECTOR_STORE_IMPLEMENTATION.md  GEMINI_MODEL_UPGRADE.md  IMPORT_PATH_FIX_SUMMARY.md  INTEGRATION_TEST_SUMMARY.md  INTENT_CLASSIFICATION_AND_SLOT_FILLING_SUMMARY.md  LOGGING_SYSTEM_SETUP_PROMPT.md  NEXT_STEPS_COORDINATOR_AGENT.md  NEXT_STEPS_PHASE8.md  OPS_PRIORITY_QUEUE_IMPLEMENTATION.md  (+42 more)
backend/alembic/: env.py
backend/alembic/versions/: 121d1415af5d_add_dialog_states_table.py  1faf3a73edb3_add_description_to_rate_cards.py  5ea86f4d316b_add_staff_and_rbac_tables.py  71cbfe8861cb_add_booking_fields_for_customer_app.py  8a887017abf5_remove_json_pincode_columns_from_rate_.py  941f2f555eb5_add_authentication_fields_to_users.py  aa6f639a1574_add_cart_tables.py  c3e31b948762_add_provider_id_to_rate_cards.py  c69d77625ee9_initial_migration_create_all_12_tables.py  drop_booking_number_use_order_id.py  fffcde798556_add_pincode_optimization_tables.py
backend/data/policies/: cancellation_policy.md  refund_policy.md
backend/docs/: EMAIL_CONFIGURATION.md  EMBEDDING_VECTOR_STORE_SETUP.md  QUICKSTART.md
backend/examples/: send_email_example.py
backend/migrations/: add_alert_tables.sql  add_ops_config_and_audit_tables.sql
backend/scripts/: check_tables.py  clear_data.py  convert_policies_to_pdf.py  describe_tables.py  diagnose_rag_scores.py  extract_easylife_data.py  find_categories_table.py  fix_imports.py  fix_migration.py  generate_all_services.py  generate_policy_documents.py  generate_refund_cancellation_policy.py  generate_service_descriptions.py  list_databases.py  list_tables.py  migrate_pincodes_to_tables.py  populate_rate_card_descriptions.py  seed_bookings.py  seed_database.py  seed_staff_rbac.py  service_data_ac_repair.py  service_data_carpentry.py  service_data_complete.py  service_data_electrical.py  service_data_plumbing.py  service_data_remaining.py  setup_structure.py  test_api_endpoints.py  test_authentication.py  test_authentication_integration.py  test_booking_apis.py  test_configuration.py  test_monitoring.py  test_pincode_queries.py  test_policy_agent_manual.py  test_refactored_apis.py  test_single_endpoint.py  test_sql_agent.py  test_staff_rbac.py  upload_policy_documents.py  (+2 more)
backend/scripts/seed_data/: categories.json  subcategories.json
backend/src/: main.py
backend/src/core/: config.py
backend/src/graphs/: agent_execution_graph.py  slot_filling_graph.py  state.py
backend/src/guardrails/: __init__.py
backend/src/middleware/: prometheus_middleware.py  timeout_middleware.py
backend/src/rag/: README.md
backend/tests/: comprehensive_fixes_summary.py  conftest.py  critical_fixes_summary.py  quick_validation.py  run_intent_tests.py  simple_cancel_test.py  test_all_scenarios.py  test_api.py  test_booking_agent.py  test_booking_agent_reschedule_modify.py  test_booking_date_validation.py  test_booking_flow.py  test_booking_id_pattern.py  test_cancellation_complete.py  test_cancellation_flow.py  test_cart_fixes.py  test_chat_service_integration.py  test_chatbot_scenarios.py  test_chunking_service.py  test_context_aware_intent.py  test_context_aware_unit.py  test_coordinator_agent.py  test_critical_fixes.py  test_curl.py  test_dialog_state_manager.py  test_embedding_pinecone.py  test_entity_extractor.py  test_entity_validator.py  test_out_of_scope.py  test_pest_control_debug.py  test_pest_control_fix.py  test_question_generator.py  test_routing_fixes.py  test_scenarios.py  test_service_agent_simple.py  test_simple.py  test_simple_routing.py  test_slot_filling_graph_integration.py  test_slot_filling_graph_unit.py  test_slot_filling_service.py  (+2 more)
(+404 files in other folders)
